# fileup

./: .gitignore  .pre-commit-config.yaml  README.md  fileup.py  pyproject.toml  setup.cfg  setup.py  zensical.toml
.github/: renovate.json
.github/workflows/: docs.yml  pytest.yml  release.yml  update-readme.yml
docs/: CNAME  __init__.py  configuration.md  contributing.md  generate.py  getting-started.md  index.md  troubleshooting.md  usage.md
docs/overrides/partials/integrations/analytics/: custom.html
tests/: __init__.py  test_fileup.py
