[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fileup"
description = "Share files with a single command"
dynamic = ["version"]
authors = [{ name = "Bas Nijholt", email = "bas@nijho.lt" }]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/basnijholt/fileup"
Documentation = "https://fileup.nijho.lt"

[project.optional-dependencies]
test = ["pytest", "pre-commit", "coverage", "pytest-cov", "pytest-mock"]

[dependency-groups]
docs = [
    "zensical",
    "markdown-gfm-admonition",
    "markdown-code-runner @ git+https://github.com/basnijholt/markdown-code-runner.git",
]

[project.scripts]
fu = "fileup:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["fileup.py"]

[tool.pytest.ini_options]
addopts = """
    --cov=fileup
    --cov-report term
    --cov-report html
    --cov-fail-under=70
"""

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 150
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T20",     # flake8-print
    "S101",    # Use of assert detected
    "PD901",   # df is a bad variable name. Be kinder to your future self.
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in {name}
    "D402",    # First line should not be the function's signature
    "PLW0603", # Using the global statement to update `X` is discouraged
    "D401",    # First line of docstring should be in imperative mood
    "SLF001",  # Private member accessed
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SLF001"]
"tests/test_examples.py" = ["E501"]
".github/*" = ["INP001"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.mypy]
python_version = "3.10"
